--- a/src/pages/ProjectContainer.css
+++ b/src/pages/ProjectContainer.css
@@ -6,9 +6,10 @@
     transition: transform 0.2s linear;
   }
   
-  .project:hover {
+ .project:hover {
     transform: translateY(-7px);
-  }
+  };
+
   
   .project__description {
     margin-top: 1em;
@@ -32,6 +33,48 @@
     margin-left: 0.5em;
   }
 
-  body {
-    color: white;
-  }
+/* Landscape phones and down */
+@media (max-width: 480px) { 
+    .console-container {
+        font-size: 2em;
+    }
+  
+    nav > ul {
+      flex-direction: column;
+    }
+  
+    .pfp > img {
+      height: 120px;
+      width: 120px;
+    }
+  } 
+    
+    /* Landscape phone to portrait tablet */
+    @media (max-width: 767px) { 
+    
+    
+     }
+    
+    /* Portrait tablet to landscape and desktop */
+    @media (min-width: 768px) and (max-width: 979px) { 
+    
+    
+     }
+    
+    /* Large desktop */
+    @media (min-width: 1200px) { 
+    
+    
+     }
+
+     @media screen and (prefers-color-scheme: dark)
+     {
+      body{
+        color: white;
+        background-color: black;
+      }
+      
+      ul {
+        background-color: goldenrod;
+      }
+     }
