--- a/src/pages/about.css
+++ b/src/pages/about.css
@@ -9,3 +9,33 @@
   body {
     color: white
   }
+
+  /* Landscape phone to portrait tablet */
+  @media (max-width: 767px) { 
+    
+    
+}
+
+/* Portrait tablet to landscape and desktop */
+@media (min-width: 768px) and (max-width: 979px) { 
+
+
+}
+
+/* Large desktop */
+@media (min-width: 1200px) { 
+
+
+}
+
+@media screen and (prefers-color-scheme: dark)
+{
+ body{
+   color: white;
+   background-color: black;
+ }
+ 
+ ul {
+    background-color: goldenrod;
+ }
+}
